--- a/src/index.html
+++ b/src/index.html
@@ -85,9 +85,9 @@
                     </div>
                 </div>
 
-                <div class="navbar__links__link navbar__links__contact" href="#">
+                <button class="navbar__links__link navbar__links__contact" href="#">
                     GET IN TOUCH
-                </div>
+                </button>
             </div>
         </nav>
 
@@ -95,7 +95,7 @@
 
     <img src="./img/back2top.svg" onclick="topFunction()" class="back-to-top"/>
 
-    <div class="hero-slider">
+    <header class="hero-slider">
         <div data-glide-el="track" class="glide__track">
             <div class="glide__slides">
 
@@ -155,13 +155,13 @@
             </div>
             <div class="slider__bullets glide__bullets" data-glide-el="controls[nav]"></div>
         </div>
-    </div>
+    </header>
 
     <section class="about-us">
-        <div class="section-title">
+        <h3 class="section-title">
             WHO WE ARE
-        </div>
-        <div class="about-us__text">
+        </h3>
+        <article class="about-us__text">
             OTC S.A. company was founded in 1995 by employees of IT and Telecommunication
             Department of the University of Science and Technology in Cracow. From the
             beginning of its activities, it has been specializing in creating software tools
@@ -169,23 +169,23 @@
             providing solutions which would enable migration to new, safe and effective
             technologies for everyone who develops and uses applications written in Borland
             Delphi, CA-Clipper, Harbour or xHarbour.
-        </div>
+        </article>
 
-        <div class="about-us__button">
+        <button class="about-us__button">
             TALK TO OUR TEAM
-        </div>
+        </button>
     </section>
 
     <section class="products">
-        <div class="section-title">
+        <h3 class="section-title">
             WHAT WE OFFER
-        </div>
+        </h3>
 
-        <div class="products__options">
-            <div class="products__options__unit active" id="op1">MEDIATOR</div>
-            <div class="products__options__unit" id="op2">TERMINAL</div>
-            <div class="products__options__unit" id="op3">WINFLECTOR</div>
-        </div>
+        <ul class="products__options">
+            <li class="products__options__unit active" id="op1">MEDIATOR</li>
+            <li class="products__options__unit" id="op2">TERMINAL</li>
+            <li class="products__options__unit" id="op3">WINFLECTOR</li>
+        </ul>
 
         <div class="products__container" id="containerMediator">
             <div class="products__container__info">
@@ -245,9 +245,9 @@
     </section>
 
     <section class="contact">
-        <div class="section-title">
+        <h3 class="section-title">
             GET IN TOUCH
-        </div>
+        </h3>
         <form class="contact__form">
             <div class="contact__form__text">
                 Got a question? We’d love to hear from you. Send us a
@@ -305,43 +305,43 @@
                     class="news__container__photo"/>
                 <div class="news__block first">
                     <span>MEDIATOR</span>
-                    <div class="news__block__title">
+                    <h4 class="news__block__title">
                         Mediator package - 4.3.3.1
-                    </div>
+                    </h4>
                     <div class="news__block__desc">
                         We have released a new version of Mediator package - 4.3.3.1.
                     </div>
-                    <div class="news__block__button">
+                    <button class="news__block__button">
                         LEARN MORE >
-                    </div>
+                    </button>
                 </div>
             </div>
 
             <div class="news__container__row2">
                 <div class="news__block second">
                     <span>MEDIATOR</span>
-                    <div class="news__block__title">
+                    <h4 class="news__block__title">
                         Mediator package - 4.3.3.1
-                    </div>
+                    </h4>
                     <div class="news__block__desc">
                         We have released a new version of Mediator package - 4.3.3.1.
                     </div>
-                    <div class="news__block__button">
+                    <button class="news__block__button">
                         LEARN MORE >
-                    </div>
+                    </button>
                 </div>
 
                 <div class="news__block third">
                     <span>MEDIATOR</span>
-                    <div class="news__block__title">
+                    <h4 class="news__block__title">
                         Mediator package - 4.3.3.1
-                    </div>
+                    </h4>
                     <div class="news__block__desc">
                         We have released a new version of Mediator package - 4.3.3.1.
                     </div>
-                    <div class="news__block__button">
+                    <button class="news__block__button">
                         LEARN MORE >
-                    </div>
+                    </button>
                 </div>
             </div>
         </div>
