feat(navbar): added dropdown icons on the navbar

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
             <div class="navbar__links">
                 <div class="navbar__links__link navbar__links__dropdown" href="#">
                     <div class="navbar__links__dropdown__dropbtn">
-                        ABOUT US
+                        ABOUT US <i class="arrow"></i>
                     </div>
 
                     <div class="navbar__links__dropdown__dropdown-content">
@@ -57,7 +57,7 @@
 
                 <div class="navbar__links__link navbar__links__dropdown" href="#">
                     <div class="navbar__links__dropdown__dropbtn">
-                        PRODUCTS
+                        PRODUCTS <i class="arrow"></i>
                     </div>
 
                     <div class="navbar__links__dropdown__dropdown-content">
@@ -75,7 +75,7 @@
 
                 <div class="navbar__links__link navbar__links__dropdown" href="#">
                     <div class="navbar__links__dropdown__dropbtn">
-                        HELP
+                        HELP <i class="arrow"></i>
                     </div>
 
                     <div class="navbar__links__dropdown__dropdown-content">
@@ -354,7 +354,7 @@
             </div>
             <ul class="footer__links">
                 <li class="with-line">
-                    © 2019 OTC S. A. All Rights Reserved.
+                    © 2021 OTC S. A. All Rights Reserved.
                 </li>
 
                 <li class="with-line">
