feat(page.html): added a universal page design

--- a/src/index.html
+++ b/src/index.html
@@ -30,17 +30,19 @@
 </head>
 
 <body>
+
+    <!-- navbar-->
     <navbar class="navbar">
-        <div class="navbar__rect1">
-            <!-- the first rectangle-->
-        </div>
+        <!-- the first rectangle-->
+        <div class="navbar__rect1"></div>
+        <!-- logo-->
         <a href="#">
             <div class="navbar__logo">
                 <img src="./img/otclogo.svg" alt="logo"/>
             </div>
         </a>
-        <!-- navbar-->
 
+        <!-- navbar links -->
         <nav class="navbar__rect2">
             <div class="navbar__links">
                 <div class="navbar__links__link navbar__links__dropdown" href="#">
@@ -49,7 +51,7 @@
                     </div>
 
                     <div class="navbar__links__dropdown__dropdown-content">
-                        <a href="#">News</a>
+                        <a href="./page.html">News</a>
                         <a href="#">References</a>
                         <a href="#">Links</a>
                     </div>
@@ -93,8 +95,10 @@
 
     </navbar>
 
+    <!-- floating back to top button -->
     <img src="./img/back2top.svg" onclick="topFunction()" class="back-to-top"/>
 
+    <!-- hero slider -->
     <header class="hero-slider">
         <div data-glide-el="track" class="glide__track">
             <div class="glide__slides">
@@ -157,6 +161,7 @@
         </div>
     </header>
 
+    <!-- about us section -->
     <section class="about-us">
         <h3 class="section-title">
             WHO WE ARE
@@ -176,6 +181,7 @@
         </button>
     </section>
 
+    <!-- products section -->
     <section class="products">
         <h3 class="section-title">
             WHAT WE OFFER
@@ -244,6 +250,7 @@
         </div>
     </section>
 
+    <!-- contact section -->
     <section class="contact">
         <h3 class="section-title">
             GET IN TOUCH
@@ -286,6 +293,7 @@
         </form>
     </section>
 
+    <!-- news section -->
     <section class="news">
         <div class="section-title">
             LATEST NEWS AND INSIGHTS
@@ -347,6 +355,7 @@
         </div>
     </section>
 
+    <!-- footer -->
     <footer class="footer">
         <div class="footer__container">
             <div class="footer__logo">
@@ -387,7 +396,7 @@
                     <br/>
                 </div>
                 <div class="footer__contact__text">
-                    <span>TELEPHONE</span><br/>
+                    <span>PHONE</span><br/>
                     +48 12 6263636
                 </div>
                 <div class="footer__contact__text">
