--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
         rel="stylesheet"/>
 
     <!-- scripts -->
+    <script src="https://kit.fontawesome.com/d639997e10.js" crossorigin="anonymous"></script>
     <script src="https://skrypt-cookies.pl/id/ee83d620f1f50089.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script
@@ -252,9 +253,42 @@
 
     <!-- contact section -->
     <section class="contact">
-        <h3 class="section-title">
-            GET IN TOUCH
-        </h3>
+        <div class="contact__stats">
+            <h3 class="section-title">
+                GET IN TOUCH
+            </h3>
+            <div class="contact__stats__numbers">
+                <div class="stat-item">
+                    <div class="stat-num">
+                        25
+                    </div>
+
+                    <div class="stat-desc">
+                        YEARS IN </br> OPERATION
+                    </div>
+                </div>
+
+                <div class="stat-item-wide">
+                    <div class="stat-num">
+                        13328
+                    </div>
+
+                    <div class="stat-desc">
+                        LICENSE KEYS </br> SOLD WORLDWIDE
+                    </div>
+                </div>
+            </div>
+
+            <div class="contact__stats__companies">
+                <h5 class="companies__title">
+                    COMPANIES THAT CHOSE US
+                </h5>
+
+                <!-- photos or slider containing companies using the products -->
+
+            </div>
+        </div>
+        
         <form class="contact__form">
             <div class="contact__form__text">
                 Got a question? We’d love to hear from you. Send us a
@@ -265,25 +299,25 @@
                 Name
             </label>
 
-            <input type="text" name="name" required placeholder=""/>
+            <input type="text" name="name" required placeholder="Severus Snape"/>
 
             <label class="contact__form__name">
                 E-mail address
             </label>
 
-            <input type="email" name="email" required placeholder=""/>
+            <input type="email" name="email" required placeholder="severus@snape.com"/>
 
             <label class="contact__form__name">
                 Topic
             </label>
 
-            <input type="text" name="topic" required placeholder=""/>
+            <input type="text" name="topic" required placeholder="Cooperation"/>
 
             <label class="contact__form__name">
                 Message*
             </label>
 
-            <textarea placeholder="" class="contact__form__message" maxlength="400"></textarea>
+            <textarea placeholder="I'm writing to..." class="contact__form__message" maxlength="400"></textarea>
 
             <div class="contact__form__disclaimer">*The maximum number of characters: 400</div>
 
@@ -306,7 +340,7 @@
         </div>
 
         <div class="news__container">
-            <div class="news__container__row1">
+            <div class="news__container__featured-post">
                 <img
                     src="./img/winflector.png"
                     alt="winflector"
@@ -317,7 +351,7 @@
                         Mediator package - 4.3.3.1
                     </h4>
                     <div class="news__block__desc">
-                        We have released a new version of Mediator package - 4.3.3.1.
+                        We have released a new version of Mediator package - 4.3.3.1. The most important changes: new functions allowing a client applications to use...
                     </div>
                     <button class="news__block__button">
                         LEARN MORE >
@@ -332,7 +366,7 @@
                         Mediator package - 4.3.3.1
                     </h4>
                     <div class="news__block__desc">
-                        We have released a new version of Mediator package - 4.3.3.1.
+                        We have released a new version of Mediator package - 4.3.3.1. The most important changes: new functions allowing a client applications to use...
                     </div>
                     <button class="news__block__button">
                         LEARN MORE >
@@ -345,7 +379,7 @@
                         Mediator package - 4.3.3.1
                     </h4>
                     <div class="news__block__desc">
-                        We have released a new version of Mediator package - 4.3.3.1.
+                        We have released a new version of Mediator package - 4.3.3.1. The most important changes: new functions allowing a client applications to use...
                     </div>
                     <button class="news__block__button">
                         LEARN MORE >
@@ -376,9 +410,9 @@
             </ul>
 
             <div class="footer__social">
-                <a href="#"><img id="fb" src="img/facebook.svg"/></a>
-                <a href="#"><img id="linkedin" src="img/linkedin.svg"/></a>
-                <a href="#"><img id="twit" src="img/twitter.svg"/></a>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
 
