update(contact): updated contact styling, fixed problems

--- a/src/index.html
+++ b/src/index.html
@@ -284,6 +284,11 @@
                     COMPANIES THAT CHOSE US
                 </h5>
 
+                <div class="companies__logos">
+                    <img src="./img/ibm.svg" alt="ibm" class="logo"/>
+                    <img src="./img/microsoft.svg" alt="microsoft" class="logo"/>
+                    <img src="./img/sybase.svg" alt="sybase" class="logo"/>
+                </div>
                 <!-- photos or slider containing companies using the products -->
 
             </div>
