--- a/src/page.html
+++ b/src/page.html
@@ -13,6 +13,10 @@
             href="https://fonts.googleapis.com/css?family=Oswald&display=swap"
             rel="stylesheet"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- scripts -->
+        <script src="https://kit.fontawesome.com/d639997e10.js" crossorigin="anonymous"></script>
+
         <title>Document</title>
     </head>
     <body>
@@ -127,70 +131,71 @@
 
         </div>
 
-        <footer class="footer">
-            <div class="footer__container">
-                <div class="footer__logo">
-                    <img src="./img/otclogo.svg" alt="logo"/>
+        <!-- footer -->
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__logo">
+                <img src="./img/otclogo.svg" alt="logo"/>
+            </div>
+            <ul class="footer__links">
+                <li class="with-line">
+                    © 2021 OTC S. A. All Rights Reserved.
+                </li>
+
+                <li class="with-line">
+                    <a href="#">Sitemap</a>
+                </li>
+
+                <li>
+                    <a href="#">Privacy Policy</a>
+                </li>
+            </ul>
+
+            <div class="footer__social">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+
+        <div class="footer__overlay">
+            <div class="footer__contact">
+                <div class="footer__contact__text">
+                    <span>ADDRESS</span><br/>
+                    OTC S.A.
+                    <br/>
+                    ul. Chelmonskiego 248
+                    <br/>
+                    31-348 Cracow
+                    <br/>
+                    Poland
+                    <br/>
                 </div>
-                <ul class="footer__links">
-                    <li class="with-line">
-                        © 2021 OTC S. A. All Rights Reserved.
-                    </li>
-
-                    <li class="with-line">
-                        <a href="#">Sitemap</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Privacy Policy</a>
-                    </li>
-                </ul>
-
-                <div class="footer__social">
-                    <a href="#"><img id="fb" src="img/facebook.svg"/></a>
-                    <a href="#"><img id="linkedin" src="img/linkedin.svg"/></a>
-                    <a href="#"><img id="twit" src="img/twitter.svg"/></a>
+                <div class="footer__contact__text">
+                    <span>PHONE</span><br/>
+                    +48 12 6263636
+                </div>
+                <div class="footer__contact__text">
+                    <span>FAX</span><br/>
+                    +48 12 6263638
+                </div>
+                <div class="footer__contact__text">
+                    <span>MOBILE</span><br/>
+                    +48 12 6263638
+                </div>
+                <div class="footer__contact__text">
+                    <span>E-MAIL</span><br/>
+                    information: office@otc.pl
+                    <br/>
+                    technical support: support@otc.pl
+                    <br/>
+                    orders: orders@otc.pl
+                    <br/>
+                    webmaster: webmaster@otc.pl
+                    <br/>
                 </div>
             </div>
-
-            <div class="footer__overlay">
-                <div class="footer__contact">
-                    <div class="footer__contact__text">
-                        <span>ADDRESS</span><br/>
-                        OTC S.A.
-                        <br/>
-                        ul. Chelmonskiego 248
-                        <br/>
-                        31-348 Cracow
-                        <br/>
-                        Poland
-                        <br/>
-                    </div>
-                    <div class="footer__contact__text">
-                        <span>TELEPHONE</span><br/>
-                        +48 12 6263636
-                    </div>
-                    <div class="footer__contact__text">
-                        <span>FAX</span><br/>
-                        +48 12 6263638
-                    </div>
-                    <div class="footer__contact__text">
-                        <span>MOBILE</span><br/>
-                        +48 12 6263638
-                    </div>
-                    <div class="footer__contact__text">
-                        <span>E-MAIL</span><br/>
-                        information: office@otc.pl
-                        <br/>
-                        technical support: support@otc.pl
-                        <br/>
-                        orders: orders@otc.pl
-                        <br/>
-                        webmaster: webmaster@otc.pl
-                        <br/>
-                    </div>
-                </div>
-            </div>
-        </footer>
+        </div>
+    </footer>
     </body>
 </html>
