add(hamburger): added hamburger, planning hamburger navigation system

--- a/src/index.html
+++ b/src/index.html
@@ -87,11 +87,12 @@
                         <a href="#">Product versions</a>
                     </div>
                 </div>
-
                 <button class="navbar__links__link navbar__links__contact" href="#">
                     GET IN TOUCH
                 </button>
             </div>
+            <img src="./img/hamburger.svg" class="hamburger" alt="test"/>
+
         </nav>
 
     </navbar>
