--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,8 @@
             <div class="navbar__links">
                 <div class="navbar__links__link navbar__links__dropdown" href="#">
                     <div class="navbar__links__dropdown__dropbtn">
-                        ABOUT US <i class="arrow"></i>
+                        ABOUT US
+                        <i class="arrow-down"></i>
                     </div>
 
                     <div class="navbar__links__dropdown__dropdown-content">
@@ -60,7 +61,8 @@
 
                 <div class="navbar__links__link navbar__links__dropdown" href="#">
                     <div class="navbar__links__dropdown__dropbtn">
-                        PRODUCTS <i class="arrow"></i>
+                        PRODUCTS
+                        <i class="arrow-down"></i>
                     </div>
 
                     <div class="navbar__links__dropdown__dropdown-content">
@@ -78,7 +80,8 @@
 
                 <div class="navbar__links__link navbar__links__dropdown" href="#">
                     <div class="navbar__links__dropdown__dropbtn">
-                        HELP <i class="arrow"></i>
+                        HELP
+                        <i class="arrow-down"></i>
                     </div>
 
                     <div class="navbar__links__dropdown__dropdown-content">
@@ -87,13 +90,48 @@
                         <a href="#">Product versions</a>
                     </div>
                 </div>
+
                 <button class="navbar__links__link navbar__links__contact" href="#">
                     GET IN TOUCH
                 </button>
+
             </div>
             <img src="./img/hamburger.svg" class="hamburger" alt="test"/>
 
         </nav>
+
+    </navbar>
+
+    <navbar class="ham-navbar">
+        <div class="ham-navbar__bar">
+            <img src="./img/otclogo.svg" alt="logo"/>
+            <i class="fas fa-times" id="ham-exit"></i>
+        </div>
+        <ul class="ham-navbar__links">
+            <a href="#">
+                <li>ABOUT US
+                    <i class="arrow-right"></i>
+                </li>
+            </a>
+            <a href="#">
+                <li>PRODUCTS
+                    <i class="arrow-right"></i>
+                </li>
+            </a>
+            <a href="#">
+                <li>PARTNERS</li>
+            </a>
+            <a href="#">
+                <li>HELP
+                    <i class="arrow-right"></i>
+                </li>
+            </a>
+
+            <div class="ham-navbar__links__cta">
+                <button>GET IN TOUCH</button>
+            </div>
+
+        </ul>
 
     </navbar>
 
@@ -111,7 +149,8 @@
                     <div class="slider__container">
                         <div class="slider__container__title">MIGRATING TO SQL?</div>
                         <div class="slider__container__text">
-                            If you are going to migrate or rewrite your application to use SQL database you definitely need to read about our Mediator ISAM Server.
+                            If you are going to migrate or rewrite your application to use SQL database you
+                            definitely need to read about our Mediator ISAM Server.
                         </div>
                         <button class="slider__container__button">READ MORE</button>
                     </div>
@@ -123,7 +162,8 @@
                     <div class="slider__container">
                         <div class="slider__container__title">HOW TO BECOME A PARTNER?</div>
                         <div class="slider__container__text">
-                            Every company producing Delphi or xBase software may become an OTC partner. For our partners we offer attractive purchase terms and technical support.
+                            Every company producing Delphi or xBase software may become an OTC partner. For
+                            our partners we offer attractive purchase terms and technical support.
                         </div>
                         <button class="slider__container__button">READ MORE</button>
                     </div>
@@ -135,7 +175,8 @@
                     <div class="slider__container">
                         <div class="slider__container__title">THE PRICE CALCULATOR</div>
                         <div class="slider__container__text">
-                            Now you can find out prices of all our software on-line. We have placed the price calculator in "Products/Prices" section. The calculator is available for
+                            Now you can find out prices of all our software on-line. We have placed the
+                            price calculator in "Products/Prices" section. The calculator is available for
                             registered users only.
                         </div>
                         <button class="slider__container__button">READ MORE</button>
@@ -148,7 +189,8 @@
                     <div class="slider__container">
                         <div class="slider__container__title">WHAT DO WE OFFER?</div>
                         <div class="slider__container__text">
-                            A transition to new and safe data-access technologies for everybody who creates and uses Borland Delphi or xBase applications.
+                            A transition to new and safe data-access technologies for everybody who creates
+                            and uses Borland Delphi or xBase applications.
                         </div>
                         <button class="slider__container__button">READ MORE</button>
                     </div>
@@ -265,207 +307,223 @@
                     </div>
 
                     <div class="stat-desc">
-                        YEARS IN </br> OPERATION
-                    </div>
-                </div>
-
-                <div class="stat-item-wide">
-                    <div class="stat-num">
-                        13328
-                    </div>
-
-                    <div class="stat-desc">
-                        LICENSE KEYS </br> SOLD WORLDWIDE
-                    </div>
+                        YEARS IN
+                    </br>
+                    OPERATION
                 </div>
             </div>
 
-            <div class="contact__stats__companies">
-                <h5 class="companies__title">
-                    COMPANIES THAT CHOSE US
-                </h5>
-
-                <div class="companies__logos">
-                    <img src="./img/ibm.svg" alt="ibm" class="logo"/>
-                    <img src="./img/microsoft.svg" alt="microsoft" class="logo"/>
-                    <img src="./img/sybase.svg" alt="sybase" class="logo"/>
+            <div class="stat-item-wide">
+                <div class="stat-num">
+                    13328
                 </div>
-                <!-- photos or slider containing companies using the products -->
 
+                <div class="stat-desc">
+                    LICENSE KEYS
+                </br>
+                SOLD WORLDWIDE
             </div>
         </div>
-        
-        <form class="contact__form">
-            <div class="contact__form__text">
-                Got a question? We’d love to hear from you. Send us a
-                message and we will repsond as soon as possible.
+    </div>
+
+    <div class="contact__stats__companies">
+        <h5 class="companies__title">
+            COMPANIES THAT CHOSE US
+        </h5>
+
+        <div class="companies__logos">
+            <img src="./img/ibm.svg" alt="ibm" class="logo"/>
+            <img src="./img/microsoft.svg" alt="microsoft" class="logo"/>
+            <img src="./img/sybase.svg" alt="sybase" class="logo"/>
+        </div>
+        <!-- photos or slider containing companies using the products -->
+
+    </div>
+</div>
+
+<form class="contact__form">
+    <div class="contact__form__text">
+        Got a question? We’d love to hear from you. Send us a message and we will
+        repsond as soon as possible.
+    </div>
+
+    <label class="contact__form__name">
+        Name
+    </label>
+
+    <input type="text" name="name" required placeholder="Severus Snape"/>
+
+    <label class="contact__form__name">
+        E-mail address
+    </label>
+
+    <input type="email" name="email" required placeholder="severus@snape.com"/>
+
+    <label class="contact__form__name">
+        Topic
+    </label>
+
+    <input type="text" name="topic" required placeholder="Cooperation"/>
+
+    <label class="contact__form__name">
+        Message*
+    </label>
+
+    <textarea
+        placeholder="I'm writing to..."
+        class="contact__form__message"
+        maxlength="400"></textarea>
+
+    <div class="contact__form__disclaimer">*The maximum number of characters: 400</div>
+
+    <button type="submit" class="contact__button">
+        SUBMIT
+    </button>
+</form>
+</section>
+
+<!-- news section -->
+<section class="news">
+<div class="section-title">
+    LATEST NEWS AND INSIGHTS
+</div>
+
+<div class="news__posts">
+    <a href="#">
+        ALL POSTS >
+    </a>
+</div>
+
+<div class="news__container">
+    <div class="news__container__featured-post">
+        <img
+            src="./img/winflector.png"
+            alt="winflector"
+            class="news__container__photo"/>
+        <div class="news__block first">
+            <span>MEDIATOR</span>
+            <h4 class="news__block__title">
+                Mediator package - 4.3.3.1
+            </h4>
+            <div class="news__block__desc">
+                We have released a new version of Mediator package - 4.3.3.1. The most important
+                changes: new functions allowing a client applications to use...
             </div>
-
-            <label class="contact__form__name">
-                Name
-            </label>
-
-            <input type="text" name="name" required placeholder="Severus Snape"/>
-
-            <label class="contact__form__name">
-                E-mail address
-            </label>
-
-            <input type="email" name="email" required placeholder="severus@snape.com"/>
-
-            <label class="contact__form__name">
-                Topic
-            </label>
-
-            <input type="text" name="topic" required placeholder="Cooperation"/>
-
-            <label class="contact__form__name">
-                Message*
-            </label>
-
-            <textarea placeholder="I'm writing to..." class="contact__form__message" maxlength="400"></textarea>
-
-            <div class="contact__form__disclaimer">*The maximum number of characters: 400</div>
-
-            <button type="submit" class="contact__button">
-                SUBMIT
+            <button class="news__block__button">
+                LEARN MORE >
             </button>
-        </form>
-    </section>
+        </div>
+    </div>
 
-    <!-- news section -->
-    <section class="news">
-        <div class="section-title">
-            LATEST NEWS AND INSIGHTS
+    <div class="news__container__row2">
+        <div class="news__block second">
+            <span>MEDIATOR</span>
+            <h4 class="news__block__title">
+                Mediator package - 4.3.3.1
+            </h4>
+            <div class="news__block__desc">
+                We have released a new version of Mediator package - 4.3.3.1. The most important
+                changes: new functions allowing a client applications to use...
+            </div>
+            <button class="news__block__button">
+                LEARN MORE >
+            </button>
         </div>
 
-        <div class="news__posts">
-            <a href="#">
-                ALL POSTS >
-            </a>
+        <div class="news__block third">
+            <span>MEDIATOR</span>
+            <h4 class="news__block__title">
+                Mediator package - 4.3.3.1
+            </h4>
+            <div class="news__block__desc">
+                We have released a new version of Mediator package - 4.3.3.1. The most important
+                changes: new functions allowing a client applications to use...
+            </div>
+            <button class="news__block__button">
+                LEARN MORE >
+            </button>
         </div>
+    </div>
+</div>
+</section>
 
-        <div class="news__container">
-            <div class="news__container__featured-post">
-                <img
-                    src="./img/winflector.png"
-                    alt="winflector"
-                    class="news__container__photo"/>
-                <div class="news__block first">
-                    <span>MEDIATOR</span>
-                    <h4 class="news__block__title">
-                        Mediator package - 4.3.3.1
-                    </h4>
-                    <div class="news__block__desc">
-                        We have released a new version of Mediator package - 4.3.3.1. The most important changes: new functions allowing a client applications to use...
-                    </div>
-                    <button class="news__block__button">
-                        LEARN MORE >
-                    </button>
-                </div>
-            </div>
+<!-- footer -->
+<footer class="footer">
+<div class="footer__container">
+    <div class="footer__logo">
+        <img src="./img/otclogo.svg" alt="logo"/>
+    </div>
+    <ul class="footer__links">
+        <li class="with-line">
+            © 2021 OTC S. A. All Rights Reserved.
+        </li>
 
-            <div class="news__container__row2">
-                <div class="news__block second">
-                    <span>MEDIATOR</span>
-                    <h4 class="news__block__title">
-                        Mediator package - 4.3.3.1
-                    </h4>
-                    <div class="news__block__desc">
-                        We have released a new version of Mediator package - 4.3.3.1. The most important changes: new functions allowing a client applications to use...
-                    </div>
-                    <button class="news__block__button">
-                        LEARN MORE >
-                    </button>
-                </div>
+        <li class="with-line">
+            <a href="#">Sitemap</a>
+        </li>
 
-                <div class="news__block third">
-                    <span>MEDIATOR</span>
-                    <h4 class="news__block__title">
-                        Mediator package - 4.3.3.1
-                    </h4>
-                    <div class="news__block__desc">
-                        We have released a new version of Mediator package - 4.3.3.1. The most important changes: new functions allowing a client applications to use...
-                    </div>
-                    <button class="news__block__button">
-                        LEARN MORE >
-                    </button>
-                </div>
-            </div>
+        <li>
+            <a href="#">Privacy Policy</a>
+        </li>
+    </ul>
+
+    <div class="footer__social">
+        <a href="#">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="#">
+            <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="#">
+            <i class="fab fa-twitter"></i>
+        </a>
+    </div>
+</div>
+
+<div class="footer__overlay">
+    <div class="footer__contact">
+        <div class="footer__contact__text">
+            <span>ADDRESS</span><br/>
+            OTC S.A.
+            <br/>
+            ul. Chelmonskiego 248
+            <br/>
+            31-348 Cracow
+            <br/>
+            Poland
+            <br/>
         </div>
-    </section>
-
-    <!-- footer -->
-    <footer class="footer">
-        <div class="footer__container">
-            <div class="footer__logo">
-                <img src="./img/otclogo.svg" alt="logo"/>
-            </div>
-            <ul class="footer__links">
-                <li class="with-line">
-                    © 2021 OTC S. A. All Rights Reserved.
-                </li>
-
-                <li class="with-line">
-                    <a href="#">Sitemap</a>
-                </li>
-
-                <li>
-                    <a href="#">Privacy Policy</a>
-                </li>
-            </ul>
-
-            <div class="footer__social">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-            </div>
+        <div class="footer__contact__text">
+            <span>PHONE</span><br/>
+            +48 12 6263636
         </div>
-
-        <div class="footer__overlay">
-            <div class="footer__contact">
-                <div class="footer__contact__text">
-                    <span>ADDRESS</span><br/>
-                    OTC S.A.
-                    <br/>
-                    ul. Chelmonskiego 248
-                    <br/>
-                    31-348 Cracow
-                    <br/>
-                    Poland
-                    <br/>
-                </div>
-                <div class="footer__contact__text">
-                    <span>PHONE</span><br/>
-                    +48 12 6263636
-                </div>
-                <div class="footer__contact__text">
-                    <span>FAX</span><br/>
-                    +48 12 6263638
-                </div>
-                <div class="footer__contact__text">
-                    <span>MOBILE</span><br/>
-                    +48 12 6263638
-                </div>
-                <div class="footer__contact__text">
-                    <span>E-MAIL</span><br/>
-                    information: office@otc.pl
-                    <br/>
-                    technical support: support@otc.pl
-                    <br/>
-                    orders: orders@otc.pl
-                    <br/>
-                    webmaster: webmaster@otc.pl
-                    <br/>
-                </div>
-            </div>
+        <div class="footer__contact__text">
+            <span>FAX</span><br/>
+            +48 12 6263638
         </div>
-    </footer>
+        <div class="footer__contact__text">
+            <span>MOBILE</span><br/>
+            +48 12 6263638
+        </div>
+        <div class="footer__contact__text">
+            <span>E-MAIL</span><br/>
+            information: office@otc.pl
+            <br/>
+            technical support: support@otc.pl
+            <br/>
+            orders: orders@otc.pl
+            <br/>
+            webmaster: webmaster@otc.pl
+            <br/>
+        </div>
+    </div>
+</div>
+</footer>
 
-    <script src="./js/products.js"></script>
-    <script type="module" src="./js/scripts.js"></script>
-    <script src="./js/contact.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+<script src="./js/products.js"></script>
+<script type="module" src="./js/scripts.js"></script>
+<script src="./js/contact.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
 </body>
 
 </html>
